Array modifier displayed in Edit mode crashes with End Cap enabled #49105

Closed
opened 2016-08-17 14:17:33 +02:00 by Mr Zak · 6 comments

System Information
Operating system: Windows 7 32 bit.

Blender Version
Broken: 2.76, 2.77

Short description of error
Once Array modifier added to the mesh with End Cap pointing to another object and Adjust edit cage to modifier's result turned on, selecting a face of the mesh in Edit mode crashes the Blender.

Exact steps for others to reproduce the error
Based on a array-modifier-end-cap-edit-mode.blend. Open it, enter Edit mode for the Cube object and try selecting a face.
To reproduce:

  1. Create 2 meshes - one to be arrayed, another serving as an end cap.
  2. Add an Array mod for the first object. Point out the second mesh as End Cap.
  3. Enable Adjust edit cage to modifier's result.
  4. Enter Edit mode and in Face select mode select a face (selecting by pressing A and / or in other selection modes will work as expected).
**System Information** Operating system: Windows 7 32 bit. **Blender Version** Broken: 2.76, 2.77 **Short description of error** Once Array modifier added to the mesh with *End Cap* pointing to another object and *Adjust edit cage to modifier's result* turned on, selecting a face of the mesh in Edit mode crashes the Blender. **Exact steps for others to reproduce the error** Based on a [array-modifier-end-cap-edit-mode.blend](https://archive.blender.org/developer/F338165/array-modifier-end-cap-edit-mode.blend). Open it, enter Edit mode for the Cube object and try selecting a face. To reproduce: 1. Create 2 meshes - one to be arrayed, another serving as an end cap. 2. Add an Array mod for the first object. Point out the second mesh as *End Cap*. 3. Enable *Adjust edit cage to modifier's result*. 4. Enter Edit mode and in Face select mode select a face (selecting by pressing **A** and / or in other selection modes will work as expected).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MrZak

Added subscriber: @MrZak

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-08-17 16:47:36 +02:00

Thanks, can confirm the issue, will have a look at it asap.

Thanks, can confirm the issue, will have a look at it asap.

This issue was referenced by 62e3849f40

This issue was referenced by 62e3849f401c64342aade0a85cca214ddd7f2e8b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49105
No description provided.