Fix T49105: Array modifier displayed in Edit mode crashes on selection, with End Cap enabled.

Origindex can be invalid, code was not fully protected against it...